--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700;800;900&display=swap&_v=20230826101735" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css?_v=20230826101735">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700;800;900&display=swap&_v=20230826102805" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230826102805">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -93,9 +93,9 @@
 						</div>
 						<div class="lessons__plus">+</div>
 						<div class="lessons__subtitle">
-							<picture><source srcset="img.webpt.webp" type="image/webp"><img src="img/gift.png" alt="img"></picture>
+							<picture><source srcset="img/lesson-img.webp" type="image/webp"><img src="img/lesson-img.png" alt="img"></picture>
 							Подарунки
-							<picture><source srcset="img.webpt.webp" type="image/webp"><img src="img/gift.png" alt="img"></picture>
+							<picture><source srcset="img/lesson-img.webp" type="image/webp"><img src="img/lesson-img.png" alt="img"></picture>
 						</div>
 						<div class="lessons__books">
 							<div class="lesson__book">
@@ -171,7 +171,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230826101735"></script>
+	<script src="js/app.min.js?_v=20230826102805"></script>
 </body>
 
 </html>
